# maudio-plugins

./: .gitignore  CMakeLists.txt  README.txt
FileReader/: CMakeLists.txt  FileReader.cpp  FileReader.hpp
FileWriter/: CMakeLists.txt  FileWriter.cpp  FileWriter.hpp  compile.sh
Mixer/: CMakeLists.txt  Mixer.cpp  compile.sh  maudio.hpp
Player/: AudioDevice.cpp  AudioDevice.hpp  CMakeLists.txt  Player.cpp  Player.hpp  compile.sh
